Add rint() to /port, remove from qnx/.

--- a/src/interfaces/ecpg/pgtypeslib/Makefile
+++ b/src/interfaces/ecpg/pgtypeslib/Makefile
@@ -18,7 +18,8 @@ SO_MINOR_VERSION= 0.0
 
 override CPPFLAGS := -I$(top_srcdir)/src/interfaces/ecpg/include -I$(top_srcdir)/src/include/utils $(CPPFLAGS)
 
-OBJS= numeric.o datetime.o common.o dt_common.o timestamp.o interval.o
+OBJS= numeric.o datetime.o common.o dt_common.o timestamp.o interval.o \
+      $(filter rint.o, $(LIBOBJS))
 
 all: all-lib
 
