Add Makefile rules for new crypt/rint() /port functions.  Add include for rint prototype.

--- a/src/interfaces/ecpg/pgtypeslib/Makefile
+++ b/src/interfaces/ecpg/pgtypeslib/Makefile
@@ -26,6 +26,9 @@ all: all-lib
 # Shared library stuff
 include $(top_srcdir)/src/Makefile.shlib
 
+rint.c: %.c : $(top_srcdir)/src/port/%.c
+	rm -f $@ && $(LN_S) $< .
+
 install: all installdirs install-lib
 
 installdirs:
