--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -262,9 +262,8 @@ host_tuple = @host@
 host_os = @host_os@
 host_cpu = @host_cpu@
 
-# Grungy things needed for HP-UX
+# The HP-UX port makefile, for one, needs access to this symbol
 HAVE_POSIX_SIGNALS= @HAVE_POSIX_SIGNALS@
-HPUXMATHLIB= @HPUXMATHLIB@
 
 # This is mainly for use on FreeBSD, where we have both a.out and elf
 # systems now.  May be applicable to other systems to?
