Fix various recent build and regression-test problems in contrib/. Includes fixes from Joe Conway.

--- a/contrib/cube/Makefile
+++ b/contrib/cube/Makefile
@@ -17,17 +17,11 @@ cubeparse.o: cubescan.c
 
 cubeparse.c: cubeparse.h ;
 
-# The sed hack is so that we can get the same error messages with
-# bison 1.875 and later as we did with earlier bisons.  Eventually,
-# I suppose, we should re-standardize on "syntax error" --- in which
-# case flip the sed translation, but don't remove it.
-
 cubeparse.h: cubeparse.y
 ifdef YACC
 	$(YACC) -d $(YFLAGS) -p cube_yy $<
-	sed -e 's/"syntax error/"parse error/' < y.tab.c > cubeparse.c
+	mv -f y.tab.c cubeparse.c
 	mv -f y.tab.h cubeparse.h
-	rm -f y.tab.c
 else
 	@$(missing) bison $< $@
 endif
