--- a/contrib/seg/Makefile
+++ b/contrib/seg/Makefile
@@ -16,17 +16,11 @@ segparse.o: segscan.c
 
 segparse.c: segparse.h ;
 
-# The sed hack is so that we can get the same error messages with
-# bison 1.875 and later as we did with earlier bisons.  Eventually,
-# I suppose, we should re-standardize on "syntax error" --- in which
-# case flip the sed translation, but don't remove it.
-
 segparse.h: segparse.y
 ifdef YACC
 	$(YACC) -d $(YFLAGS) -p seg_yy $<
-	sed -e 's/"syntax error/"parse error/' < y.tab.c > segparse.c
+	mv -f y.tab.c segparse.c
 	mv -f y.tab.h segparse.h
-	rm -f y.tab.c
 else
 	@$(missing) bison $< $@
 endif
