--- a/src/makefiles/Makefile.win32
+++ b/src/makefiles/Makefile.win32
@@ -1,4 +1,8 @@
 # $Header$
+
+# Use replacement include files for those missing on Win32
+override CPPFLAGS+="-I$(top_srcdir)/src/include/port/win32_include"
+
 DLLTOOL= dlltool
 DLLWRAP= dllwrap
 BE_DLLLIBS= -L$(top_builddir)/src/backend -lpostgres
