Adjust configure so that extern tzname[] will be checked for independently of whether the struct tm tm_zone member exists. Also run autoheader, which seems not to have been done lately; it added about three more things to pg_config.h.in than I was expecting...

--- a/configure.in
+++ b/configure.in
@@ -735,7 +735,7 @@ AC_C_STRINGIZE
 PGAC_C_SIGNED
 AC_C_VOLATILE
 PGAC_C_FUNCNAME_SUPPORT
-AC_STRUCT_TIMEZONE
+PGAC_STRUCT_TIMEZONE
 PGAC_UNION_SEMUN
 PGAC_STRUCT_SOCKADDR_UN
 PGAC_STRUCT_ADDRINFO
