Fix compilation on Cygwin.

--- a/src/interfaces/ecpg/compatlib/Makefile
+++ b/src/interfaces/ecpg/compatlib/Makefile
@@ -17,6 +17,7 @@ SO_MAJOR_VERSION= 1
 SO_MINOR_VERSION= 0.0
 
 override CPPFLAGS := -I$(top_srcdir)/src/interfaces/ecpg/include -I$(top_srcdir)/src/include/utils $(CPPFLAGS)
+SHLIB_LINK = -L../pgtypeslib -lpgtypes
 
 OBJS= informix.o
 
