--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -152,6 +152,9 @@ TK_LIBS			= @TK_LIBS@
 TK_LIB_SPEC		= @TK_LIB_SPEC@
 TK_XINCLUDES		= @TK_XINCLUDES@
 
+THREAD_CFLAGS		= @THREAD_CFLAGS@
+THREAD_LIBS		= @THREAD_LIBS@
+
 have_docbook	= @have_docbook@
 DOCBOOKSTYLE	= @DOCBOOKSTYLE@
 COLLATEINDEX	= @COLLATEINDEX@
