--- a/configure.in
+++ b/configure.in
@@ -585,6 +585,16 @@ AC_PATH_PROG(TAR, tar)
 PGAC_CHECK_STRIP
 
 AC_CHECK_PROGS(YACC, ['bison -y'])
+
+if test "$YACC"; then
+  if bison --version | sed q | $AWK '{ if ($4 < 1.875) exit 0; else exit 1;}'; then
+    AC_MSG_WARN([
+*** The installed version of Bison is too old.  PostgreSQL needs
+*** Bison version 1.875 or later.])
+    unset YACC
+  fi
+fi
+
 if test -z "$YACC"; then
   AC_MSG_WARN([
 *** Without Bison you will not be able to build PostgreSQL from CVS or
