--- a/configure.in
+++ b/configure.in
@@ -587,7 +587,7 @@ PGAC_CHECK_STRIP
 AC_CHECK_PROGS(YACC, ['bison -y'])
 
 if test "$YACC"; then
-  if bison --version | sed q | $AWK '{ if ($4 < 1.875) exit 0; else exit 1;}'; then
+  if "$YACC" --version | sed q | $AWK '{ if ($4 < 1.875) exit 0; else exit 1;}'; then
     AC_MSG_WARN([
 *** The installed version of Bison is too old.  PostgreSQL needs
 *** Bison version 1.875 or later.])
