libpq can now talk to either 3.0 or 2.0 protocol servers.  It first tries protocol 3, then falls back to 2 if postmaster rejects the startup packet with an old-format error message.  A side benefit of the rewrite is that SSL-encrypted connections can now be made without blocking.  (I think, anyway, but do not have a good way to test.)

--- a/src/interfaces/libpq/Makefile
+++ b/src/interfaces/libpq/Makefile
@@ -21,7 +21,7 @@ SO_MINOR_VERSION= 1
 override CPPFLAGS := -I$(srcdir) $(CPPFLAGS) -DFRONTEND -DSYSCONFDIR='"$(sysconfdir)"'
 
 OBJS= fe-auth.o fe-connect.o fe-exec.o fe-misc.o fe-print.o fe-lobj.o \
-      pqexpbuffer.o pqsignal.o fe-secure.o \
+      fe-protocol2.o fe-protocol3.o pqexpbuffer.o pqsignal.o fe-secure.o \
       dllist.o md5.o ip.o wchar.o encnames.o \
       $(filter crypt.o getaddrinfo.o inet_aton.o snprintf.o strerror.o path.o, $(LIBOBJS))
 
