Changes: 1 intarray: bugfix for int[]-int[] operation 2 intarray: split _int.c to several files (_int.c now is unused) 3 ntarray (gist__intbig_ops opclass): use special type for index storage 4 ltree (gist__ltree_ops opclass), intarray (gist__intbig_ops): optimize GiST's penalty and picksplit interface functions, now use Hemming distance.
Teodor Sigaev

--- a/contrib/intarray/Makefile
+++ b/contrib/intarray/Makefile
@@ -4,7 +4,8 @@ subdir = contrib/intarray
 top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 
-MODULES = _int
+MODULE_big = _int
+OBJS = _int_bool.o _int_gist.o _int_op.o _int_tool.o _intbig_gist.o 
 DATA_built = _int.sql
 DOCS = README.intarray
 REGRESS = _int
