<sys/socket.h> requires <sys/types.h> to already have been included on some platforms.

--- a/configure.in
+++ b/configure.in
@@ -794,6 +794,7 @@ PGAC_STRUCT_ADDRINFO
 
 AC_CHECK_TYPES([struct cmsgcred, struct fcred, struct sockcred], [], [],
 [#include <sys/param.h>
+#include <sys/types.h>
 #include <sys/socket.h>
 #include <sys/ucred.h>])
 
