Add thread.c for libpq threading, and hook it into libpq/configure.

--- a/src/port/Makefile
+++ b/src/port/Makefile
@@ -22,5 +22,8 @@ endif
 libpgport.a: $(LIBOBJS)
 	$(AR) crs $@ $^
 
+thread.o: thread.c
+	$(CC) $(CFLAGS) $(THREAD_CFLAGS) -c thread.c
+
 clean distclean maintainer-clean:
 	rm -f libpgport.a $(LIBOBJS)
