--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -121,6 +121,7 @@ localedir := @localedir@
 #
 # Records the choice of the various --enable-xxx and --with-xxx options.
 
+with_threads	= @with_threads@
 with_java	= @with_java@
 with_perl	= @with_perl@
 with_python	= @with_python@
@@ -340,7 +341,7 @@ endif
 #
 # substitute implementations of the C library
 
-LIBOBJS = @LIBOBJS@ path.o
+LIBOBJS = @LIBOBJS@ path.o threads.o
 
 ifneq (,$(LIBOBJS))
 LIBS += -lpgport
