--- a/contrib/isbn_issn/isbn_issn.sql.in
+++ b/contrib/isbn_issn/isbn_issn.sql.in
@@ -116,14 +116,30 @@ CREATE OPERATOR <> (
 	PROCEDURE = issn_ne
 );
 
+-- Register 'issn' comparison function
+CREATE FUNCTION issn_cmp(issn, issn)
+RETURNS integer
+AS '$libdir/isbn_issn'
+LANGUAGE c;
+
+-- Create default operator class for 'issn'    --
+-- Needed to create index or primary key       --
+
+CREATE OPERATOR CLASS issn_ops
+DEFAULT FOR TYPE issn USING btree 
+AS
+        OPERATOR        1       < ,
+        OPERATOR        2       <= ,
+        OPERATOR        3       = ,
+        OPERATOR        4       >= ,
+        OPERATOR        5       > ,
+        FUNCTION        1       issn_cmp(issn, issn);
+
+
+------------------------------------------------------------------------
+
 --
---	eof
---
---
---	PostgreSQL code for ISBNs.
---
---	$Id$
---
+--	Same code for ISBN
 --
 --	Input and output functions and the type itself:
 --
@@ -239,16 +255,8 @@ RETURNS integer
 AS '$libdir/isbn_issn'
 LANGUAGE c;
 
--- Register 'issn' comparison function
-CREATE FUNCTION issn_cmp(issn, issn)
-RETURNS integer
-AS '$libdir/isbn_issn'
-LANGUAGE c;
-
--------------------------------------------------
 -- Create default operator class for 'isbn'    --
 -- Needed to create index or primary key       --
--------------------------------------------------
 
 CREATE OPERATOR CLASS isbn_ops
 DEFAULT FOR TYPE isbn USING btree 
@@ -259,23 +267,3 @@ AS
         OPERATOR        4       >= ,
         OPERATOR        5       > ,
         FUNCTION        1       isbn_cmp(isbn, isbn);
-
--------------------------------------------------
--- Create default operator class for 'issn'    --
--- Needed to create index or primary key       --
--------------------------------------------------
-
-CREATE OPERATOR CLASS issn_ops
-DEFAULT FOR TYPE issn USING btree 
-AS
-        OPERATOR        1       < ,
-        OPERATOR        2       <= ,
-        OPERATOR        3       = ,
-        OPERATOR        4       >= ,
-        OPERATOR        5       > ,
-        FUNCTION        1       issn_cmp(issn, issn);
-
-
---
---	eof
---
