Use ISO dates in pgtypeslib by default. Applied patch by Philip Yarra to fix some thread issues. Added a new data type "decimal" which is mostly the same as our 	"numeric" but uses a fixed length array to store the digits. This is 	for compatibility with Informix and maybe others.

--- a/src/interfaces/ecpg/test/Makefile
+++ b/src/interfaces/ecpg/test/Makefile
@@ -22,7 +22,7 @@ test_informix: test_informix.o
 	$(ECPG) $<
 
 test_informix.c: test_informix.pgc
-	$(ECPG) -C INFORMIX $<
+	$(ECPG) -C INFORMIX -r no_indicator $<
 clean:
 	rm -f $(TESTS) $(TESTS:%=%.o) $(TESTS:%=%.c) log
 	
