--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -72,7 +72,7 @@ $(distdir).tar: distdir
 opt_files := \
 	src/tools src/corba src/data src/tutorial \
 	src/bin/pgtclsh \
-	$(addprefix src/interfaces/, libpgtcl python jdbc) \
+	$(addprefix src/interfaces/, libpgtcl jdbc) \
 	$(addprefix src/pl/, plperl plpython tcl)
 
 docs_files := doc/postgres.tar.gz doc/src doc/TODO.detail
