Make ecpg SQLSTATE-aware.  Map existing SQLCODE assignments to SQLSTATEs, rather than parsing the message.  Add some documentation about embedded SQL.

--- a/src/interfaces/ecpg/compatlib/Makefile
+++ b/src/interfaces/ecpg/compatlib/Makefile
@@ -16,7 +16,7 @@ NAME= ecpg_compat
 SO_MAJOR_VERSION= 1
 SO_MINOR_VERSION= 0.0
 
-override CPPFLAGS := -I$(top_srcdir)/src/interfaces/ecpg/include -I$(top_srcdir)/src/include/utils $(CPPFLAGS)
+override CPPFLAGS := -I$(top_srcdir)/src/interfaces/ecpg/include -I$(libpq_srcdir) -I$(top_srcdir)/src/include/utils $(CPPFLAGS)
 SHLIB_LINK = -L../pgtypeslib -lpgtypes -L../ecpglib -lecpg
 
 OBJS= informix.o
