--- a/configure.in
+++ b/configure.in
@@ -647,7 +647,10 @@ AC_SEARCH_LIBS(getopt_long, [getopt gnugetopt])
 AC_CHECK_LIB(unix, main)
 AC_SEARCH_LIBS(crypt,  crypt)
 # BeOS:
-AC_CHECK_LIB(bind, __inet_ntoa)
+if test "$PORTNAME" = "beos"
+then
+	AC_CHECK_LIB(bind, __inet_ntoa)
+fi
 # Solaris:
 AC_SEARCH_LIBS(fdatasync, [rt posix4])
 # Cygwin:
