Move simple_prompt()/sprompt.c into /port.

--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -341,7 +341,7 @@ endif
 #
 # substitute implementations of the C library
 
-LIBOBJS = @LIBOBJS@ path.o thread.o
+LIBOBJS = @LIBOBJS@ path.o sprompt.o thread.o
 
 ifneq (,$(LIBOBJS))
 LIBS += -lpgport
