--- a/src/interfaces/jdbc/build.xml
+++ b/src/interfaces/jdbc/build.xml
@@ -22,7 +22,6 @@
   <property name="builddir" value="build" />
   <property name="package" value="org/postgresql" />
   <property name="debug" value="on" />
-  <property name="ssl" value="false" />
 
   <property file="build.properties"/>
 
@@ -167,13 +166,17 @@
         <equals arg1="${ssl}" arg2="true"/>
     </condition>
     <condition property="ssl_config" value="//">
-        <equals arg1="${ssl}" arg2="false"/>
+        <not>
+            <equals arg1="${ssl}" arg2="true"/>
+        </not>
     </condition>
     <condition property="ssl_edition" value="SSL">
         <equals arg1="${ssl}" arg2="true"/>
     </condition>
     <condition property="ssl_edition" value="NO SSL">
-        <equals arg1="${ssl}" arg2="false"/>
+        <not>
+            <equals arg1="${ssl}" arg2="true"/>
+        </not>
     </condition>
 
     <!-- Some defaults -->
