I'm quite fond of doing VPATH builds, i.e. building outside the source tree. This also catches lots of little Makefile bugs, so here's a small patch for one of them (replacing an explicit reference to thread.c with a reference to it as the first prerequsite of the rule makes make look for it in the place where it was found (the source tree) rather than in the build tree. (using GNU make 3.79.1)
John Gray

--- a/src/port/Makefile
+++ b/src/port/Makefile
@@ -23,7 +23,7 @@ libpgport.a: $(LIBOBJS)
 	$(AR) crs $@ $^
 
 thread.o: thread.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) $(THREAD_CFLAGS) -c thread.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(THREAD_CFLAGS) -c $<
 
 clean distclean maintainer-clean:
 	rm -f libpgport.a $(LIBOBJS)
