Add "override" for make variable JADEFLAGS, since upper directory passes this variable on the command line.

--- a/doc/src/sgml/Makefile
+++ b/doc/src/sgml/Makefile
@@ -48,7 +48,7 @@ endif
 
 # Enable draft mode during development
 ifneq (,$(findstring devel, $(VERSION)))
-JADEFLAGS += -V draft-mode
+override JADEFLAGS += -V draft-mode
 endif
 
 
