Make the default pg_hba.conf include an entry for ::1 only if configure set HAVE_IPV6.  Per recent discussions.

--- a/src/bin/initdb/Makefile
+++ b/src/bin/initdb/Makefile
@@ -18,6 +18,7 @@ all: initdb
 initdb: initdb.sh $(top_builddir)/src/Makefile.global
 	sed -e 's/@VERSION@/$(VERSION)/g' \
 	    -e 's,@SHELL@,$(SHELL),g' \
+	    -e 's,@HAVE_IPV6@,$(HAVE_IPV6),g' \
 	    -e 's,@bindir@,$(bindir),g' \
 	    -e 's,@datadir@,$(datadir),g' \
 	  $< >$@
