--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -263,6 +263,9 @@ host_tuple = @host@
 host_os = @host_os@
 host_cpu = @host_cpu@
 
+# Make HAVE_IPV6 available for initdb script creation
+HAVE_IPV6= @HAVE_IPV6@
+
 # The HP-UX port makefile, for one, needs access to this symbol
 HAVE_POSIX_SIGNALS= @HAVE_POSIX_SIGNALS@
 
