--- a/configure.in
+++ b/configure.in
@@ -241,7 +241,7 @@ AC_MSG_NOTICE([using CFLAGS=$CFLAGS])
 # We already have this in Makefile.win32, but configure needs it too
 if test "$PORTNAME" = "win32"
 then
-	CPPFLAGS="$CPPFLAGS -Isrc/include/port/win32"
+	CPPFLAGS="$CPPFLAGS -I$srcdir/src/include/port/win32"
 fi
 
 # Check if the compiler still works with the template settings
