--- a/src/interfaces/jdbc/org/postgresql/Driver.java.in
+++ b/src/interfaces/jdbc/org/postgresql/Driver.java.in
@@ -17,6 +17,7 @@ import java.sql.*;
 import java.util.*;
 
 import org.postgresql.util.PSQLException;
+import org.postgresql.util.PSQLState;
 
 /*
  * The Java SQL framework allows for multiple database drivers.  Each
@@ -419,7 +420,7 @@ public class Driver implements java.sql.Driver
 	 */
 	public static SQLException notImplemented()
 	{
-		return new PSQLException("postgresql.unimplemented");
+		return new PSQLException("postgresql.unimplemented", PSQLState.NOT_IMPLEMENTED);
 	}
 
 	/**
