--- a/configure.in
+++ b/configure.in
@@ -1031,17 +1031,12 @@ AC_SUBST(THREAD_LIBS)
 # One trick here is that if we don't call AC_CHECK_FUNCS, the
 # functions are marked "not found", which is perfect.
 #
-if test "$enable_thread_safety" = yes -a "$NEED_REENTRANT_FUNC_NAMES" = yes ; then
+if test "$enable_thread_safety" = yes -a "$NEED_REENTRANT_FUNCS" = yes ; then
 _CFLAGS="$CFLAGS"
 _LIBS="$LIBS"
 CFLAGS="$CFLAGS $THREAD_CFLAGS"
 LIBS="$LIBS $THREAD_LIBS"
-AC_CHECK_FUNC(strerror_r,
-	[], [AC_MSG_ERROR([strerror_r not found, required on this platform for --enable-thread-safety])])
-AC_CHECK_FUNC(getpwuid_r,
-	[], [AC_MSG_ERROR([getpwuid_r not found, required on this platform for --enable-thread-safety])])
-AC_CHECK_FUNC(gethostbyname_r,
-	[], [AC_MSG_ERROR([gethostbyname_r not found, required on this platform for --enable-thread-safety])])
+AC_CHECK_FUNCS([strerror_r getpwuid_r gethostbyname_r])
 CFLAGS="$_CFLAGS"
 LIBS="$_LIBS"
 fi
