Make contrib/cube work with flex 2.5.31.  Fix it up to have a real btree operator class, too, since in PG 7.4 you can't GROUP without one.

--- a/contrib/cube/Makefile
+++ b/contrib/cube/Makefile
@@ -5,7 +5,7 @@ top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 
 MODULE_big = cube
-OBJS= cube.o cubeparse.o buffer.o
+OBJS= cube.o cubeparse.o
 
 DATA_built = cube.sql
 DOCS = README.cube
@@ -28,7 +28,7 @@ endif
 
 cubescan.c: cubescan.l
 ifdef FLEX
-	$(FLEX) $(FLEXFLAGS) -Pcube_yy -o'$@' $<
+	$(FLEX) $(FLEXFLAGS) -o'$@' $<
 else
 	@$(missing) flex $< $@
 endif
