Since I haven't gotten a reply, can someone REVERT the lines in src/Makefile.shlib that adds $(libdir)/$(soname) for port,eq,unixware to $(soname)?
Larry Rosenman

--- a/src/Makefile.shlib
+++ b/src/Makefile.shlib
@@ -191,7 +191,7 @@ ifeq ($(PORTNAME), unixware)
   else
     LINK.shared		= $(CC) -G
   endif
-  LINK.shared		+= -Wl,-z,text -Wl,-h,$(libdir)/$(soname) 
+  LINK.shared		+= -Wl,-z,text -Wl,-h,$(soname) 
 endif
 
 ifeq ($(PORTNAME), cygwin)
