Rename thread compile flag.  Move thread test program to tools/thread, and improve tests.

--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -150,7 +150,7 @@ TK_LIBS			= @TK_LIBS@
 TK_LIB_SPEC		= @TK_LIB_SPEC@
 TK_XINCLUDES		= @TK_XINCLUDES@
 
-THREAD_CFLAGS		= @THREAD_CFLAGS@
+THREAD_CPPFLAGS		= @THREAD_CPPFLAGS@
 THREAD_LIBS		= @THREAD_LIBS@
 
 have_docbook	= @have_docbook@
