--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-\dnl Process this file with autoconf to produce a configure script.
+dnl Process this file with autoconf to produce a configure script.
 dnl $Header$
 dnl
 dnl Developers, please strive to achieve this order:
@@ -1002,7 +1002,7 @@ AC_FUNC_FSEEKO
 if test "$enable_thread_safety" = yes; then
 AC_CHECK_HEADER(pthread.h, [], [AC_MSG_ERROR([pthread.h not found, required for --enable-thread-safetys])])
 
-if test "$SUPPORTS_THREADS" != yes; then
+if test "$THREAD_SUPPORT" != yes; then
 AC_MSG_ERROR([
 Cannot enable threads on your platform.
 Please report your platform threading info to the PostgreSQL mailing lists
@@ -1016,6 +1016,7 @@ else
 THREAD_CPPFLAGS=
 THREAD_LIBS=
 fi
+AC_SUBST(THREAD_SUPPORT)
 AC_SUBST(THREAD_CPPFLAGS)
 AC_SUBST(THREAD_LIBS)
 
