--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -150,6 +150,7 @@ TK_LIBS			= @TK_LIBS@
 TK_LIB_SPEC		= @TK_LIB_SPEC@
 TK_XINCLUDES		= @TK_XINCLUDES@
 
+THREAD_SUPPORT		= @THREAD_SUPPORT@
 THREAD_CPPFLAGS		= @THREAD_CPPFLAGS@
 THREAD_LIBS		= @THREAD_LIBS@
 
