Adjust Darwin build to use the default 'two level namespace' linking method.  Fix a number of places where shared libraries were linked without mentioning all the libraries they depend on; the Darwin and AIX ports are known to require this, and it doesn't seem to hurt any other supported platforms.  (Hence, remove code in pl/tcl makefile that tried to avoid mentioning other libs if not needed.)

--- a/src/Makefile.shlib
+++ b/src/Makefile.shlib
@@ -82,7 +82,7 @@ endif
 
 ifeq ($(PORTNAME), darwin)
   shlib			:= lib$(NAME)$(DLSUFFIX).$(SO_MAJOR_VERSION).$(SO_MINOR_VERSION)
-  LINK.shared		= $(COMPILER) $(DARWIN_NAMESPACE_SPEC) -bundle -undefined suppress
+  LINK.shared		= $(COMPILER) -bundle
 endif
 
 ifeq ($(PORTNAME), openbsd)
