--- a/src/pl/tcl/Makefile
+++ b/src/pl/tcl/Makefile
@@ -11,7 +11,7 @@ top_builddir = ../../..
 include $(top_builddir)/src/Makefile.global
 
 
-override CPPFLAGS := $(CPPFLAGS) $(TCL_INCLUDE_SPEC)
+override CPPFLAGS += $(TCL_INCLUDE_SPEC)
 
 
 # Find out whether Tcl was built as a shared library --- if not, we
@@ -29,24 +29,7 @@ endif
 endif
 
 
-# The following attempts to figure out what libraries need to be
-# linked with pltcl.  The information comes from the tclConfig.sh
-# file, but it's mostly bogus.  This just might work.
-
-ifneq ($(TCL_SHLIB_LD_LIBS),)
-# link command for a shared lib must mention shared libs it uses
-SHLIB_LINK = $(TCL_LIB_SPEC) $(TCL_LIBS) -lc
-else
-ifeq ($(PORTNAME), hpux)
-# link command for a shared lib must mention shared libs it uses,
-# even though Tcl doesn't think so...
-SHLIB_LINK = $(TCL_LIB_SPEC) $(TCL_LIBS) -lc
-else
-# link command for a shared lib must NOT mention shared libs it uses
-SHLIB_LINK = $(TCL_LIB_SPEC)
-endif
-endif
-
+SHLIB_LINK = $(BE_DLLLIBS) $(TCL_LIB_SPEC) $(TCL_LIBS) -lc
 
 NAME = pltcl
 SO_MAJOR_VERSION = 2
