Got the link order wrong :-(

--- a/src/interfaces/libpgtcl/Makefile
+++ b/src/interfaces/libpgtcl/Makefile
@@ -20,7 +20,7 @@ override CPPFLAGS := -I$(libpq_srcdir) $(CPPFLAGS) $(TCL_INCLUDE_SPEC)
 
 OBJS= pgtcl.o pgtclCmds.o pgtclId.o
 
-SHLIB_LINK = $(TCL_LIB_SPEC) $(TCL_LIBS) $(libpq) \
+SHLIB_LINK = $(libpq) $(TCL_LIB_SPEC) $(TCL_LIBS) \
 	$(filter -lssl -lcrypto -lcrypt, $(LIBS)) $(THREAD_LIBS)
 
 all: submake-libpq all-lib
