--- a/src/Makefile.shlib
+++ b/src/Makefile.shlib
@@ -128,6 +128,9 @@ endif
 ifeq ($(PORTNAME), hpux)
   shlib			:= lib$(NAME)$(DLSUFFIX).$(SO_MAJOR_VERSION)
   LINK.shared		= $(LD) +h $(soname) -b +b $(libdir)
+  ifeq ($(GCC), yes)
+    SHLIB_LINK		+= `$(CC) -print-libgcc-file-name`
+  endif
 endif
 
 ifeq ($(PORTNAME), irix5)
