--- a/configure.in
+++ b/configure.in
@@ -409,7 +409,7 @@ if test -z "$ANT"; then
   AC_MSG_ERROR([Ant is required to build Java components
 If you have Ant already installed, see config.log for details on the failure.])
 fi
-if "$ANT" -version | sed q | egrep -v ' 1\.[[5-9]]| [[2-9]]\.' >/dev/null ; then
+if "$ANT" -version | egrep -i 'ant version' | sed q | egrep -v ' 1\.[[5-9]]| [[2-9]]\.' >/dev/null ; then
   AC_MSG_ERROR([Ant version >= 1.5 is required to build Java components])
 fi],
 [AC_MSG_RESULT(no)])
