--- a/configure.in
+++ b/configure.in
@@ -351,7 +351,7 @@ IFS=$ac_save_IFS
 #
 AC_MSG_CHECKING([allow thread-safe client libraries])
 PGAC_ARG_BOOL(enable, thread-safety, no, [  --enable-thread-safety  make client libraries thread-safe],
-              [AC_DEFINE([USE_THREADS], 1,
+              [AC_DEFINE([ENABLE_THREAD_SAFETY], 1,
                          [Define to 1 to build client libraries as thread-safe code. (--enable-thread-safety)])])
 AC_MSG_RESULT([$enable_thread_safety])
 AC_SUBST(enable_thread_safety)
