Use --with-docdir to choose installation location of documentation; put back --infodir, which several automatic build environments expect to exist. Add --without-docdir to prevent installation of documentation, which is helpful for things like RPM that have their own method of installing documentation.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -26,7 +26,9 @@ include $(top_builddir)/src/Makefile.global
 .NOTPARALLEL:
 
 ifneq ($(wildcard $(srcdir)/postgres.tar.gz),)
+ifneq (,$(docdir))
 found_html := yes
+endif
 endif
 
 ifneq ($(wildcard $(srcdir)/man.tar.gz),)
