--- a/doc/src/sgml/Makefile
+++ b/doc/src/sgml/Makefile
@@ -22,6 +22,13 @@ JADE = jade
 endif
 SGMLINCLUDE = -D $(srcdir)
 
+# If this is a vpath build, some generated SGML will be in the build
+# tree, so we need to make sure we look there as well as in the
+# source tree
+ifeq ($(vpath_build), yes)
+SGMLINCLUDE += -D .
+endif
+
 ifndef NSGMLS
 NSGMLS = nsgmls
 endif
@@ -80,6 +87,9 @@ all: html
 html: postgres.sgml $(ALLSGML) stylesheet.dsl
 	@rm -f *.html
 	$(JADE) $(JADEFLAGS) $(SGMLINCLUDE) $(CATALOG) -d stylesheet.dsl -i output-html -t sgml $<
+ifeq ($(vpath_build), yes)
+	@cp $(srcdir)/stylesheet.css .
+endif
 
 
 COLLATEINDEX := LC_ALL=C $(PERL) $(COLLATEINDEX) -f -g
