Move Informix compatibility include files out of the way.  compatlib.h was integrated into ecpg_informix.h, the other ones go into their own subdirectory that is automatically considered by the embedded preprocessor when in Informix mode.

--- a/src/interfaces/ecpg/preproc/Makefile
+++ b/src/interfaces/ecpg/preproc/Makefile
@@ -11,7 +11,8 @@ PATCHLEVEL=0
 override CPPFLAGS := -I$(srcdir)/../include -I$(srcdir) $(CPPFLAGS) $(THREAD_CPPFLAGS) \
 	-DMAJOR_VERSION=$(MAJOR_VERSION) \
 	-DMINOR_VERSION=$(MINOR_VERSION) -DPATCHLEVEL=$(PATCHLEVEL) \
-	-DINCLUDE_PATH=\"$(includedir)\" 
+	-DINCLUDEDIR=\"$(includedir)\" \
+	-DPKGINCLUDEDIR=\"$(pkgincludedir)\" 
 
 ifeq ($(GCC), yes)
 override CFLAGS += -Wno-error
