Supress ecpg thread test if configure didn't enable threads.  Fix tools/thread to run even if configure didn't enable threads because this test is used before enabling threads for the OS.

--- a/src/interfaces/ecpg/test/Makefile
+++ b/src/interfaces/ecpg/test/Makefile
@@ -8,7 +8,10 @@ override CPPFLAGS := -I$(srcdir)/../include -I$(libpq_srcdir) $(CPPFLAGS) $(THRE
 
 ECPG = ../preproc/ecpg -I$(srcdir)/../include
 
-TESTS = test1 test2 test3 test4 perftest dyntest dyntest2 test_notice test_code100 test_init testdynalloc num_test dt_test test_informix test_thread
+TESTS = test1 test2 test3 test4 perftest dyntest dyntest2 test_notice test_code100 test_init testdynalloc num_test dt_test test_informix
+ifeq ($(enable_thread_safety), yes)
+TESTS += test_thread
+endif
 
 all: $(TESTS)
 
